source/stylesheets/components/_background.scss
body {
 background-color: transparent;
 height: 100%;
 overflow: auto;
 scroll-snap-type: y mandatory;
}

html {
  scroll-behavior: smooth;
  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
  background-color: $blue;
  background-repeat: no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  overflow: hidden;
  height: 100%;
}
/* ... */

